Made some of the requested changes